# book-service

./: PythonFoundry-API-collection.json  README.md  alembic.ini  books.db  justfile  main.py  pyproject.toml
api/v1/: books.py
db/: db.py
db/model/: Book.py  BookEntity.py
migrations/: env.py
migrations/versions/: 4d8c5fb49bee_price_column_addition.py  68ae0b7515b8_first_revision_of_the_db_using_alembic.py
