[project]
name = "book-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "basedpyright>=1.34.0",
    "fastapi==0.123.5",
    "ruff==0.14.7",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
]
